--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+    <div class="color">
+        <button id="copy">Copy Hexadecimal color</button>
+        <button id="generate">genertae a new color</button>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
