--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Color picker</title>
 </head>
 <body>
 
+    <p class="hexCode"></p>
+
     <div class="color">
         <button id="copy">Copy Hexadecimal color</button>
-        <button id="generate">genertae a new color</button>
+        <button id="generate">Genertae a new color</button>
     </div>
 
     <script src="app.js"></script>
