Fix: probleme couleur qui ne match pas avec la couleur hexadecimal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="hexCode"></p>
     <div class="color">
         <button id="copy">Copy Hexadecimal color</button>
-        <button id="generate">Generte a new color</button>
+        <button id="generate">Generate a new color</button>
     </div>
     <script src="app.js"></script>
 </body>
