Update : le btn copy ne fonctionne plus :(

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <button id="copy">Copy Hexadecimal color</button>
         <button id="generate">Generate a new color</button>
     </div>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
